[tool.poetry]
name = "loguru-issue480"
version = "0.1.0"
description = ""
authors = ["yanyongyu <yanyongyu_1@126.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
Sphinx = "^4.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
